# todo-react

./: package-lock.json  package.json  tailwind.config.js
src/: App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  mod.rs  repo.rs  service.rs
src-tauri/src/app/lib/: db_conn.rs
src-tauri/src/app/model/: error.rs  mod.rs  request.rs  todo.rs
src-tauri/src/app/repo_impl/: mod.rs  mysql_impl.rs
src/components/: ArchivedTodo.jsx  RecentTodo.jsx  RecentTodos.jsx  Sidebar.jsx  SidebarButton.jsx  Todo.jsx
src/pages/: Archive.jsx  Dashboard.jsx  TodoList.jsx
